; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_events.c_window_content_scale_callback.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_events.c_window_content_scale_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [56 x i8] c"%08x to %i at %0.3f: Window content scale: %0.3f %0.3f\0A\00", align 1
@counter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, float, float)* @window_content_scale_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_content_scale_callback(i32* %0, float %1, float %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %4, align 8
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.TYPE_3__* @glfwGetWindowUserPointer(i32* %8)
  store %struct.TYPE_3__* %9, %struct.TYPE_3__** %7, align 8
  %10 = load i32, i32* @counter, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @counter, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call double (...) @glfwGetTime()
  %16 = load float, float* %5, align 4
  %17 = load float, float* %6, align 4
  %18 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %14, double %15, float %16, float %17)
  ret void
}

declare dso_local %struct.TYPE_3__* @glfwGetWindowUserPointer(i32*) #1

declare dso_local i32 @printf(i8*, i32, i32, double, float, float) #1

declare dso_local double @glfwGetTime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
